--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,44 @@ body {
 .card {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  gap: 1.5rem;
+  padding: 1rem;
+  box-shadow: 1px 0px 25px 13px rgba(0, 0, 0, 0.75);
+
+  backdrop-filter: blur(4px) saturate(167%);
+  -webkit-backdrop-filter: blur(4px) saturate(167%);
+  background-color: rgba(17, 25, 40, 0.78);
+  border-radius: 12px;
+  border: 1px solid rgba(255, 255, 255, 0.125);
+
+  transition: all 0.5s ease;
 }
 
 .card-header img {
   height: 250px;
+  border-radius: 5px;
+}
+h1 {
+  font-size: 1.8rem;
+  color: #ffffff;
+  margin-top: 1rem;
+}
+
+h2 {
+  font-size: 1.3rem;
+  color: #ffffff9e;
+  margin-bottom: 0.5rem;
+}
+
+p {
+  color: #ffffff5b;
+  font-size: 0.8rem;
+}
+
+.card:hover {
+  border: 1px solid #ffffff44;
+  box-shadow: 0 7px 50px 10px #0000008a;
+  transform: scale(1.01);
+  transition: all 0.5s ease;
 }
